--- a/Aula 05/Atividade 02/index.html
+++ b/Aula 05/Atividade 02/index.html
@@ -2,39 +2,58 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title> 
+    <title>Boletim</title> 
     <script src="script.js" defer></script>
 
     <style>
-        td {
+        td, th {
             text-align: center;
         }
-    </style>
+        
+        #linhaMedias {
+            display: none;
+        }
 
+        td[class^="columnTotalRight"] {
+            display: none;
+        }
+
+        .botoes-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .botoes-container button {
+            margin: 0 10px;
+            padding: 8px 16px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <table align="center" border="5" cellspacing="3px" id="boletim">
-            <thead bgcolor="gray">
-                <tr>
-                    <td rowspan="2">Aluno</td>
-                    <td colspan="3">Semestre 01</td>
-                    <td colspan="3">Semestre 02</td>
-                    <td colspan="3">Semestre 03</td>
-                    <td rowspan="2">Botao</td>
-                </tr>
-                <tr>
-                    <td>Nota 01</td>
-                    <td>Nota 02</td>
-                    <td>Nota 03</td>
-                    <td>Nota 01</td>
-                    <td>Nota 02</td>
-                    <td>Nota 03</td>
-                    <td>Nota 01</td>
-                    <td>Nota 02</td>
-                    <td>Nota 03</td>
-                </tr>
-            </thead>
-            <tbody>
+        <thead>
+            <tr>
+                <td rowspan="2">Aluno</td>
+                <td colspan="3">Semestre 01</td>
+                <td colspan="3">Semestre 02</td>
+                <td colspan="3">Semestre 03</td>
+                <td id="mediaAlunoHeader" rowspan="2" style="display:none;">Média Aluno</td>
+            </tr>
+            <tr>
+                <td>Nota 01</td>
+                <td>Nota 02</td>
+                <td>Nota 03</td>
+                <td>Nota 01</td>
+                <td>Nota 02</td>
+                <td>Nota 03</td>
+                <td>Nota 01</td>
+                <td>Nota 02</td>
+                <td>Nota 03</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr id="aluno-01">
                 <td>Bernardo</td>
                 <td class="column01">10</td>
                 <td class="column02">7</td>
@@ -45,8 +64,9 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight01"></td>
+            </tr>
+            <tr id="aluno-02">
                 <td>Deivid</td>
                 <td class="column01">8</td>
                 <td class="column02">7</td>
@@ -57,8 +77,9 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight02"></td>
+            </tr>
+            <tr id="aluno-03">
                 <td>Tadeu</td>
                 <td class="column01">5</td>
                 <td class="column02">7</td>
@@ -69,10 +90,11 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight03"></td>
+            </tr>
+            <tr id="aluno-04">
                 <td>João</td>
-                <td class="column01">7.7</td>
+                <td class="column01">7</td>
                 <td class="column02">7</td>
                 <td class="column03">3</td>
                 <td class="column04">8</td>
@@ -81,8 +103,9 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight04"></td>
+            </tr>
+            <tr id="aluno-05">
                 <td>Pedro</td>
                 <td class="column01">3</td>
                 <td class="column02">7</td>
@@ -93,8 +116,9 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight05"></td>
+            </tr>
+            <tr id="aluno-06">
                 <td>Douglas</td>
                 <td class="column01">10</td>
                 <td class="column02">7</td>
@@ -105,8 +129,9 @@
                 <td class="column07">3</td>
                 <td class="column08">8</td>
                 <td class="column09">5</td>
-            </tbody>
-            <tbody>
+                <td class="columnTotalRight06"></td>
+            </tr>
+            <tr id="linhaMedias">
                 <td><b>Média</b></td>
                 <td class="columnTotal01"></td>
                 <td class="columnTotal02"></td>
@@ -117,8 +142,13 @@
                 <td class="columnTotal07"></td>
                 <td class="columnTotal08"></td>
                 <td class="columnTotal09"></td>
-                <td class="totalizador"><button>Totalizador</button></td>
-            </tbody>
+            </tr>
+        </tbody>
     </table>
+
+    <div class="botoes-container">
+        <button id="btnToggleLinha">Mostrar/Esconder Linha de Médias</button>
+        <button id="btnToggleColuna">Mostrar/Esconder Coluna de Médias</button>
+    </div>
 </body>
 </html>
