realizado atividades 05, 06 e 07 da lista

--- a/php/FolhaExercicios/Atividade05/index.html
+++ b/php/FolhaExercicios/Atividade05/index.html
@@ -7,12 +7,19 @@
 </head>
 <body>
     <form action="acao.php" method="post">
-        <p>Base do Triangulo em Centimetros</p>
+        <p>Base do Triangulo Retângulo em Centimetros</p>
         <input type="number" name="base" id="base">
-        <p>Altura do Triangulo em Centimetros</p>
+        <p>Altura do Triangulo Retângulo em Centimetros</p>
         <input type="number" name="altura" id="altura">
         <br><br>
         <input type="submit" value="Send">
     </form>
 </body>
 </html>
+
+
+<!-- Crie um programa que calcule a área de um triângulo retângulo, cuja fórmula segue
+abaixo. Crie as variáveis apropriadas para o cálculo em PHP e por fim exiba uma frase
+com o valor da operação.
+
+Fórmula -> Resultado = (Base * Altura) / 2 -->
